Fix formatting for Markdown and remove old content

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,15 @@
-site_name: Wiki Bash Hackers
+site_name: The Bash Hackers Wiki
+
 theme:
   name: material
+  features:
+    - navigation.tabs
+
+plugins:
+  - tags
+
+markdown_extensions:
+  - admonition
+
+nav:
+  - Start: index.md
