Fix Markdown formatting for classictest.md

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,6 +38,17 @@ plugins:
 
 markdown_extensions:
   - admonition
+  - pymdownx.emoji:
+      emoji_index: !!python/name:materialx.emoji.twemoji
+      emoji_generator: !!python/name:materialx.emoji.to_svg
+  - pymdownx.highlight:
+      anchor_linenums: true
+  - pymdownx.superfences
+  - pymdownx.highlight
+  - pymdownx.inlinehilite
+  - pymdownx.keys
+  - pymdownx.smartsymbols
+  - footnotes
 
 nav:
   - Start: index.md
