support dark mode
this commit adds support for dark mode.

Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,6 +21,15 @@ theme:
     - content.code.copy
   icon:
     repo: fontawesome/brands/github
+  palette: 
+    - scheme: default
+      toggle:
+        icon: material/brightness-7 
+        name: Switch to dark mode
+    - scheme: slate
+      toggle:
+        icon: material/brightness-4
+        name: Switch to light mode
 
 plugins:
   - git-revision-date-localized:
